@@ -2,6 +2,15 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gluegen-2.1.4 (12 Feb 2014)
+
+  12 Feb 2014; Guillaume Horel <guillaume.horel@gmail.com>
+  +files/2.1.4-dont-copy-jars.patch, +files/2.1.4-dont-strip.patch,
+  +files/2.1.4-dont-test-archive.patch, +gluegen-2.1.4.ebuild,
+  -files/2.1.4_rc1-dont-copy-jars.patch, -files/2.1.4_rc1-dont-strip.patch,
+  -files/2.1.4_rc1-dont-test-archive.patch, -gluegen-2.1.4_rc1.ebuild:
+  dev-java/gluegen: dev-java/gluegen version bump
+
   04 Jan 2014; Johann Schmitz <ercpe@gentoo.org>
   +files/2.1.4_p1-dont-test-archive.patch:
   Don't test the zip archive (thus avoid dep to 7z)
